--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Особисті проєкти Тараса Шевченка</title>
+    <title>Особисті проєкти Марії Іваненко</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +13,11 @@
 
     <section id="about">
         <h2>Про мене</h2>
-        <p>Мене звати Тарас Шевченко. Я - учень курсу інформатики, який:</p>
+        <p>Мене звати Марія Іваненко. Я - студентка факультету комп'ютерних наук, яка:</p>
         <ul>
-            <li>Вивчає основи розробки ігор</li>
-            <li>Практикується у створенні інтерактивних проєктів</li>
-            <li>Опановує сучасні технології та інструменти для розробки 2D-ігор</li>
+            <li>Вивчає веб-розробку та програмування</li>
+            <li>Практикується у створенні інтерактивних веб-застосунків</li>
+            <li>Опановує сучасні технології фронтенду та бекенду</li>
         </ul>
     </section>
 
@@ -25,14 +25,14 @@
         <h2>Проєкти</h2>
         <ul>
             <li>
-                <h3><a href="example-project/index.html">Пригодницька гра на GDevelop</a></h3>
-                <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який досліджує світ, збирає предмети та уникає перешкод.</p>
+                <h3><a href="portfolio-site/index.html">Персональне портфоліо</a></h3>
+                <p>Цей проєкт є моїм особистим сайтом-портфоліо, де я демонструю свої роботи, навички та досягнення у сфері веб-розробки.</p>
             </li>
         </ul>
     </section>
 
     <footer>
-        <p>&copy; 2024 Тарас Шевченко. Усі права захищені.</p>
+        <p>&copy; 2024 Марія Іваненко. Усі права захищені.</p>
     </footer>
 </body>
-</html> 
+</html>
