--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Проєкти</h2>
         <ul>
             <li>
-                <h3><a href="portfolio-site/index.html">Персональне портфоліо</a></h3>
+                <h3><a href="my-game/">Персональне портфоліо</a></h3>
                 <p>Цей проєкт є моїм особистим сайтом-портфоліо, де я демонструю свої роботи, навички та досягнення у сфері веб-розробки.</p>
             </li>
         </ul>
