--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Особисті проєкти Марії Іваненко</title>
+    <title>Особисті проєкти Юлії Ільніцької</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
 
     <section id="about">
         <h2>Про мене</h2>
-        <p>Мене звати Марія Іваненко. Я - студентка факультету комп'ютерних наук, яка:</p>
+        <p>Мене звати ,Юля. Я - студентка Ліцею 141 ОРТ, яка:</p>
         <ul>
             <li>Вивчає веб-розробку та програмування</li>
             <li>Практикується у створенні інтерактивних веб-застосунків</li>
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Марія Іваненко. Усі права захищені.</p>
+        <p>&copy; 2024 Юлія Ільніцька. Усі права захищені.</p>
     </footer>
 </body>
 </html>
